fixed a whole funch of things, alignment tried to use flexbot

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
+
+
 body {
   background-color: #4492f4;
-  text-decoration-color: white;
+
 }
